Fix index on mobile being too wide

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -267,7 +267,7 @@ pre {
 
     .sponsors-member {
         img {
-            height: 120px;
+            height: 100px;
             margin: 25px;
         }
     }
